# app/models/appliance.rb
@@ -1,0 +1,8 @@
+class Appliance < ApplicationRecord
+  has_many :services, dependent: :destroy
+  has_many :bookings, through: :services
+
+  validates :name, presence: true
+  validates :brand, presence: true
+  validates :model, presence: true
+end
