# app/serializers/availability_serializer.rb
@@ -1,0 +1,4 @@
+class AvailabilitySerializer < ActiveModel::Serializer
+  attributes :id, :day_of_week, :start_time, :end_time, :created_at, :updated_at
+  belongs_to :repairer
+end
